--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "sensiolabs/security-checker": "^6.0"
     },
     "config": {
         "preferred-install": {
@@ -42,7 +43,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
