--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -8,7 +8,8 @@ framework:
         # Other options include:
 
         # Redis
-        #app: cache.adapter.redis
+        #app: cache.adapter.
+        app: '%cache_adapter%'
         #default_redis_provider: redis://localhost
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
