--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,3 +35,9 @@ services:
     # App\Service\MarkdownHelper:
     #     arguments:
     #         $logger: '@monolog.logger.markdown'
+
+    # This was needed for versions prior to Symfony 4.2
+    # App\Form\TypeExtension\TextareaSizeExtension:
+    #     tags:
+    #         - { name: form.type_extension,
+    #             extended_type: Symfony\Component\Form\Extension\Core\Type\TextareaType }
